--- a/doc/README.tex
+++ b/doc/README.tex
@@ -43,7 +43,7 @@ If the compilation works properly, the executable \path=chainBD.exe= will appear
 \section{Usage Instructions}
 To run the program in the main directory, type:
 \begin{verbatim}
-./chainBD.exe suffix
+./chainBD.exe suffix > outputfile.out
 \end{verbatim}
 
 Here, \verb=suffix= can be any string up to 100 characters in length. 
@@ -70,7 +70,7 @@ An example parameter file (\verb=param.example1=) is provided. This will run a B
 ./chainBD.exe example1
 \end{verbatim}
 
-Use the script \verb=example1.m= to visualize the resulting MSD of a bead at the end of the chain. It should look something like this:
+Use the script \verb=checkexample.m= to visualize the resulting MSD of a bead at the end of the chain. It should look something like this:
 
 \centerline{\includegraphics[width=0.7\textwidth]{example_MSD.eps}}
 
